// Copyright 2019 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.keytransparency.transcript;

option go_package = "github.com/google/keytransparency/core/testdata/transcript_go_proto";

import "v1/keytransparency.proto";
import "v1/admin.proto";

// Transcript holds both test setup and a series of test vectors.
// Transcripts are generated by recording the rpcs generated by integration tests.
message Transcript {
   string description = 1;
   // directory contains public keys and other information needed to verify the rpcs.
   v1.Directory directory = 2;
   // rpcs are the individual request, response pairs.
   repeated Unary rpcs = 3;
}

// Unary rpcs have one request and one response.
message Unary {
   string desc = 1;
   // trust_new_log controls the client verifier state.
   // If true, the client records the resp.LatestLogRoot and uses it
   // for the next rpc's request.last_verified_tree_size.
   bool trust_new_log = 2;
   oneof req_resp_pair {
      GetUser get_user = 4;
      BatchGetUser batch_get_user = 5;
      BatchListUserRevisions batch_list_user_revisions = 6;
   }
}

// GetUser request and response
message GetUser {
    v1.GetUserRequest request = 1;
    v1.GetUserResponse response = 2;
}

// BatchGetUser request and response
message BatchGetUser {
    v1.BatchGetUserRequest request = 1;
    v1.BatchGetUserResponse response = 2;
}

// BatchListUserRevisions request and response
message BatchListUserRevisions {
    v1.BatchListUserRevisionsRequest request = 1;
    v1.BatchListUserRevisionsResponse response = 2; 
}
